--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Hangfire – Fire-and-Forget for ASP.NET
+title: Hangfire – Background job processing for ASP.NET
 ---
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron underlined">
     <div class="container">
         <div class="row">
@@ -16,16 +15,13 @@ title: Hangfire – Fire-and-Forget for ASP.NET
                     Backed by Redis, SQL Server, SQL Azure, MSMQ, RabbitMQ.
                 </p>
                 <p style="font-size: inherit;">
-<img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat">
+                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat">
 
-<span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
+                    <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
 
-<span class="g-plusone" data-size="medium"></span>
+                    <span class="g-plusone" data-size="medium"></span>
 
-                    <iframe src="http://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="89" height="20"></iframe>
-
-<!-- Поместите этот тег за последним тегом виджета кнопка +1. -->
+                    <!-- Поместите этот тег за последним тегом виджета кнопка +1. -->
 <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -33,6 +29,9 @@ title: Hangfire – Fire-and-Forget for ASP.NET
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+
+                    <iframe src="http://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="89" height="20"></iframe>
 
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
