--- a/docs-n-support.html
+++ b/docs-n-support.html
@@ -8,114 +8,48 @@ active: docs-n-support
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
-            <h2>Popular questions</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <h4>What are the requirements?</h4>
-                    <p>
-                        Hangfire requires only .NET Framework 4.5 and uses persistent storage of your project.
-                    </p>
-
-                    <h4>How to get started?</h4>
-                    <p>
-                        It is simple – just read our <a href="#">Quick Start</a> guide.
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <h4>Is it free for commercial use?</h4>
-                    <p>
-                        Yes, Hangfire Core is open source library and completely free even for commercial use. 
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="list-group pull-right">
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">
-                    <span class="glyphicon glyphicon-small glyphicon-user"></span>
-                        Explore Forum
-                    </h4>
-                    <p class="list-group-item-text">
-                        wsed salfjasldfjlasjdlflaj sdflaj sd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum aspernatur et, amet Cumque.
-                    </p>
-                </a>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">
-                        <span class="glyphicon glyphicon-small glyphicon-envelope"></span>
-                        Email us
-                    </h4>
-                    <p class="list-group-item-text">
-                        adsl glkja lsfdlkajsdfljasl flasj dlfaj sldk Lorem ipsum dolor sit amet, consectetur adipisicing elit. orro iste nobis sunt maxime perferendis laborum.
-                    </p>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <h2>Documentation</h2>
+        <div class="col-md-6">
+            <h2 class="page-header">Documentation</h2>
+            <h4>Official documentation</h4>
             <ul>
-                <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
-                <li><a href="http://docs.hangfire.io">User's Guide</a></li>
+                <li>
+                    <a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a>
+                </li>
+                <li>
+                    <a href="http://docs.hangfire.io">User's Guide</a>
+                </li>
+                <li>
+                    <a href="https://github.com/HangfireIO/Hangfire/tree/master/src" target="_blank">The Best™ documentation</a>
+                </li>
             </ul>
-            <h3>Tutorials</h3>
+
+            <h4>Tutorials</h4>
             <ul>
                 <li><a href="http://docs.hangfire.io/en/latest/tutorials/send-email.html">Sending Mail in Background with ASP.NET MVC</a></li>
                 <li><a href="http://docs.hangfire.io/en/latest/tutorials/highlight.html">Highlighter Tutorial</a></li>
                 <li><a href="http://frankouimette.com/tutorial-installing-hangfire-without-asp-net-mvc/">Installing Hangfire without ASP.NET MVC</a></li>
             </ul>
-
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="page-header">If You've Got Trouble</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <span class="glyphicon glyphicon-envelope"></span> Business &amp; Enterprise Support
-                </div>
-                <div class="panel-body">
-                    <p>
-                        Hangfire Business and Enterprise edition customers can contact support using the email address provided in your subscription.
-                    </p>
-                    <p>
-                        <a class="btn btn-primary" href="mailto:support@hangfire.io">Contact Support</a>
-                    </p>
-                </div>
-            </div>
         </div>
         <div class="col-md-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <span class="glyphicon glyphicon-user"></span> Community Support
-                </div>
-                <div class="panel-body">
-                    <p class="lad">
-                        For Open edition customers, Hangfire Forum is your best resource to get answers and help.
-                    </p>
-                    <p>
-                        <a class="btn btn-primary" href="http://discuss.hangfire.io">Explore Forum</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-info">
-                <p>
-                    <strong>Busuness Hours</strong>
-                </p>
-                <p>
-                    All Hangfire Support Channels, including the Forum, are staffed by Hangfire author during Hangfire Business Hours:
-                    <em>Monday-Friday, 10am-6pm MSK</em>
-                </p>
-            </div>
+            <h2 class="page-header">Support</h2>
+            <h4>
+                <span class="glyphicon glyphicon-small glyphicon-user"></span> Community Support
+            </h4>
+            <p>
+                For Open edition customers, Hangfire Forum is your best resource to get answers and help.
+            </p>
+            <p>
+                <a class="btn btn-primary" href="http://discuss.hangfire.io">Explore Forum</a>
+            </p>
+            <h4>
+                <span class="glyphicon glyphicon-small glyphicon-envelope"></span> Business &amp; Enterprise Support
+            </h4>
+            <p>
+                Hangfire Business and Enterprise edition customers can contact support using the email address provided in your subscription.
+            </p>
+            <p>
+                <a class="btn btn-primary" href="mailto:support@hangfire.io">Contact Support</a>
+            </p>
         </div>
     </div>
 </div>
