--- a/support/index.html
+++ b/support/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hangfire Support
 display_brand: true
 nav_underlined: true
-active: docs-n-support
+active: support
 ---
 
 <div class="container">
