--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -25,7 +25,9 @@ active: subscriptions
                 </div>
                 <div class="plan-body">
                     <ul class="plan-items">
-                        <li>Hangfire Core (under <abbr class="initialism">LGPL</abbr>)</li>
+                        <li>
+                            <a href="/core/">Hangfire Core</a> (under <abbr class="initialism">LGPL</abbr>)
+                        </li>
                         <li>Documentation</li>
                         <li>Forum support</li>
                         <li class="plan-item-spacer"></li>
@@ -47,8 +49,12 @@ active: subscriptions
                 </div>
                 <div class="plan-body">
                     <ul class="plan-items">
-                        <li>Hangfire Core (under <abbr class="initialism">LGPL</abbr>)</li>
-                        <li>Hangfire Pro (under <abbr class="initialism">EULA</abbr>)</li>
+                        <li>
+                            <a href="/core/">Hangfire Core</a> (under <abbr class="initialism">LGPL</abbr>)
+                        </li>
+                        <li>
+                            <a href="/pro/">Hangfire Pro</a> (under <abbr class="initialism">EULA</abbr>)
+                        </li>
                         <li>Documentaion</li>
                         <li>Forum support</li>
                         <li>Private e-mail support</li>
@@ -69,8 +75,12 @@ active: subscriptions
                 </div>
                 <div class="plan-body">
                     <ul class="plan-items">
-                        <li>Hangfire Core (under <abbr class="initialism">EULA</abbr>)</li>
-                        <li>Hangfire Pro (under <abbr class="initialism">EULA</abbr>)</li>
+                        <li>
+                            <a href="/core/">Hangfire Core</a> (under <abbr class="initialism">EULA</abbr>)
+                        </li>
+                        <li>
+                            <a href="/pro/">Hangfire Pro</a> (under <abbr class="initialism">EULA</abbr>)
+                        </li>
                         <li>Documentation</li>
                         <li>Forum support</li>
                         <li>Private e-mail support</li>
@@ -85,39 +95,45 @@ active: subscriptions
             </div>
         </div>
     </div>
+
+    <h2>Frequently asked questions</h2>
+
     <div class="row">
-        <h2>Frequently asked questions</h2>
+        <div class="col-md-6">
+            <h3>Is there a trial version?</h3>
+            <p>
+                There's no free trial but I do offer a 30 day period with full refund if Pro does not work for you.
+            </p>
 
-<h3>
-<a name="user-content-is-there-a-trial-version" class="anchor" href="#is-there-a-trial-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is there a trial version?</h3>
+            <h3>What happens if my subscription lapses?</h3>
+            <p>
+                You lose access to Pro updates, bug fixes and priority support. You retain the right to run the version you have.
+            </p>
 
-<p>There's no free trial but I do offer a 14 day period with full refund if Pro does not work for you.</p>
+            <h3>Can you transfer a license?</h3>
+            <p>
+                Licenses are <strong>not</strong> transferrable to another company.  I will transfer the license from a user-specific email to a group email address (e.g. john_smith@example.com &rarr; tech@example.com) but only for <strong>the same domain</strong>.  It is strongly recommended that you buy the license using a group email address so the license is not attached to any one employee's email address.
+            </p>
+        </div>
+        <div class="col-md-6">
+            <h3>How many licenses do I need to buy?</h3>
+        <p>
+            Every organization that runs Hangfire Pro for their own benefit must purchase a license.
+        </p>
 
-<h3>
-<a name="user-content-what-happens-if-my-subscription-lapses" class="anchor" href="#what-happens-if-my-subscription-lapses" aria-hidden="true"><span class="octicon octicon-link"></span></a>What happens if my subscription lapses?</h3>
+        <h3>What is the buying process?</h3>
+        <p>
+            Click the <em>Buy Now</em> button and put in your info.  Your license will be associated with the email address you use.  I'll generate your download URL and email it to you within 24 hours.
+        </p>
 
-<p>You lose access to the gem server and priority support.  You won't get any more updates or bug fixes and 'bundle install' won't work anymore.  You retain the right to run the version you have.</p>
+        <p>
+            You'll receive a confirmation email upon purchase which can be used as an invoice/receipt.
+        </p>
 
-<h3>
-<a name="user-content-can-you-transfer-a-license" class="anchor" href="#can-you-transfer-a-license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can you transfer a license?</h3>
-
-<p>Licenses are <strong>not</strong> transferrable to another company.  I will transfer the license from a user-specific email to a group email address (e.g. john_smith@example.com &rarr; tech@example.com) but only for <strong>the same domain</strong>.  It is strongly recommended that you buy the license using a group email address so the license is not attached to any one employee's email address.</p>
-
-<h3>
-<a name="user-content-how-many-licenses-do-i-need-to-buy" class="anchor" href="#how-many-licenses-do-i-need-to-buy" aria-hidden="true"><span class="octicon octicon-link"></span></a>How many licenses do I need to buy?</h3>
-
-<p>Every organization that runs Hangfire Pro for their own benefit must purchase a license.</p>
-
-<h3>
-<a name="user-content-what-is-the-buying-process" class="anchor" href="#what-is-the-buying-process" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is the buying process?</h3>
-
-<p>Click the <em>Buy Now</em> button and put in your info.  Your license will be associated with the email address you use.  I'll generate your download URL and email it to you within 24 hours.</p>
-
-<p>You'll receive a confirmation email upon purchase which can be used as an invoice/receipt.</p>
-
-<h3>
-<a name="user-content-can-i-get-a-refund" class="anchor" href="#can-i-get-a-refund" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I get a refund?</h3>
-
-<p>Yes, up to two weeks after purchase.  Let me know the reason and maybe I can help but either way it's not a problem.  Email <a href="mailto:support@hangfire.io">support@hangfire.io</a>.</p>
+        <h3>Can I get a refund?</h3>
+        <p>
+            Yes, up to 30 days after purchase.  Let me know the reason and maybe I can help but either way it's not a problem.  Email <a href="mailto:support@hangfire.io">support@hangfire.io</a>.
+        </p>
+        </div>
     </div>
 </div>
