--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -9,8 +9,8 @@ active: subscriptions
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="page-header text-center">
-                Hangfire is free even for commercial use!
+            <h1 class="page-header">
+                Subscriptions
             </h1>
             <p class="lead">
                 Prices below are <strong>per organization</strong> with no royalties, no hidden fees and no psychological pricing. We provide <strong>30 day</strong> unconditional money back guarantee.
