Add a button to support page

--- a/support/index.html
+++ b/support/index.html
@@ -49,6 +49,7 @@ active: support
             </p>
             <p>
                 <a class="btn btn-primary" href="mailto:support@hangfire.io">Contact Support</a>
+                <a class="btn btn-default" href="/subscriptions/">Get a subscription</a>
             </p>
         </div>
     </div>
