--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<meta charset=utf-8>
-<title>Redirecting...</title>
-<link rel=canonical href="/pricing/">
-<meta http-equiv=refresh content="0; url=/pricing/">
-<h1>Redirecting...</h1>
-<a href="/pricing/">Click here if you are not redirected.</a>
-<script>location='/pricing/'</script>
+---
+layout: redirect
+redirect_url: /pricing/
+---
