--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ server.Start();</pre>
         <div class="col-md-12" style="text-align: center;">
             <hr>
             <div>
-                <a class="btn btn-primary btn-lg" href="/core/">Overview</a>
+                <a class="btn btn-primary btn-lg" href="/overview.html">Overview</a>
                 <br class="visible-xs">
                 <span class="btn btn-lg">or</span>
                 <br class="visible-xs">
