Change lead text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Hangfire – Background job processing for ASP.NET
                     Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
                 </p>
                 <p>
-                    Backed by Redis, SQL Server, SQL Azure, MSMQ, RabbitMQ.
+                    Backed by persistent storages. Open and free for commercial use.
                 </p>
                 <p style="font-size: inherit;">
                     <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat">
