--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Hangfire – Background job processing for ASP.NET
                     Backed by persistent storages. Open and free for commercial use.
                 </p>
                 <p style="font-size: inherit;">
-                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat">
+                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/v/Hangfire.svg?style=flat">
 
                     <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
 
