Small tricks and fixes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 title: Hangfire – Background job processing for ASP.NET
+jumbotron: true
 ---
 
-<div class="jumbotron underlined">
+<div class="jumbotron jumbotron-underlined">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
