--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Hangfire – Background job processing for ASP.NET
 jumbotron: true
+keywords: asp.net background jobs
+description: Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required, backed by persistent storages. Open and free for commercial use.
 ---
 
 <div class="jumbotron jumbotron-underlined">
