--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hangfire – Background jobs for ASP.NET
 jumbotron: true
 keywords: asp.net background jobs
-description: Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required, backed by persistent storages. Open and free for commercial use.
+description: Incredibly easy way to perform fire-and-forget, delayed and recurring background jobs in ASP.NET. No Windows Service required, backed by persistent storages.
 ---
 
 <div class="jumbotron jumbotron-underlined">
