--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hangfire – Background jobs for ASP.NET
+title: Hangfire – Background jobs and workers for ASP.NET
 jumbotron: true
-keywords: asp.net background jobs
+keywords: asp.net background jobs, asp.net background workers
 description: Incredibly easy way to perform fire-and-forget, delayed and recurring background jobs in ASP.NET. No Windows Service required, backed by persistent storages.
 ---
 
