--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hangfire – Background jobs and workers for ASP.NET
 jumbotron: true
 keywords: asp.net background jobs, asp.net background workers
-description: Incredibly easy way to perform fire-and-forget, delayed and recurring background jobs in ASP.NET. No Windows Service required, backed by persistent storages.
+description: Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.
 ---
 
 <div class="jumbotron jumbotron-underlined">
