Some microdata, just for fun

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ description: Incredibly easy way to perform fire-and-forget, delayed and recurri
 
 <div class="jumbotron jumbotron-underlined">
     <div class="container">
-        <div class="row">
+        <div class="row" itemscope itemtype="http://schema.org/SoftwareApplication">
             <div class="col-md-7">
-                <h1>Hangfire</h1>
+                <h1 itemprop="name">Hangfire</h1>
                 <p>
                     Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
                 </p>
@@ -57,7 +57,7 @@ description: Incredibly easy way to perform fire-and-forget, delayed and recurri
                     <div class="carousel-inner">
                         <div class="item active">
                             <a href="/img/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
-                                <img src="/img/dashboard-sm.png" alt="Hangfire Dashboard">
+                                <img itemprop="image" src="/img/dashboard-sm.png" alt="Hangfire Dashboard">
                             </a>
                         </div>
                         <div class="item">
