Use site.title instead of site.name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ description: Incredibly easy way to perform fire-and-forget, delayed and recurri
             <div class="col-md-7">
                 <h1 itemprop="name">Hangfire</h1>
                 <p>
-                    Incredibly easy way to perform fire-and-forget, delayed and recurring tasks inside ASP.NET applications. No Windows Service required.
+                    {{ site.description }}
+                    No Windows Service required.
                 </p>
                 <p>
                     Backed by persistent storages. Open and free for commercial use.
