--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
                     Backed by persistent storages. Open and free for commercial use.
                 </p>
                 <p style="font-size: inherit;">
-                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/v/Hangfire.svg?style=flat">
-
+                    <a href="https://www.nuget.org/packages/Hangfire/">
+                        <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="http://img.shields.io/nuget/v/Hangfire.svg?style=flat">
+                    </a>
                     <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
 
                     <span class="g-plusone" data-size="medium" data-href="http://hangfire.io"></span>
