Fix "other storages" link in index.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
             <div class="feature-body">
                 <h3>Persistent</h3>
                 <p>
-                    Background jobs are saved into a persistent storage&nbsp;– <a href="https://www.nuget.org/packages/HangFire.SqlServer/">SQL Server</a>, <a href="http://nuget.hangfire.io/feeds/hangfire-pro/Hangfire.Pro.Redis/1.2.1">Redis</a>, <a href="https://www.nuget.org/packages/Hangfire.PostgreSql/">PostgreSQL</a>, <a href="https://www.nuget.org/packages/HangFire.Mongo/">MongoDB</a> and <a href="http://localhost:4000/extensions.html#storages">others</a>.
+                    Background jobs are saved into a persistent storage&nbsp;– <a href="https://www.nuget.org/packages/HangFire.SqlServer/">SQL Server</a>, <a href="http://nuget.hangfire.io/feeds/hangfire-pro/Hangfire.Pro.Redis/1.2.1">Redis</a>, <a href="https://www.nuget.org/packages/Hangfire.PostgreSql/">PostgreSQL</a>, <a href="https://www.nuget.org/packages/HangFire.Mongo/">MongoDB</a> and <a href="/extensions.html#storages">others</a>.
                 </p>
                 <p>
                     You can safely restart your application and use Hangfire with ASP.NET without worrying about application pool recycles.
