Add GitHub icon to navbar

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
         </div>
         <div class="col-md-4 feature">
             <div class="feature-icon">
-                <span class="glyphicon glyphicon-user"></span>
+                <i class="fa fa-github" style="font-size: 23px;"></i>
             </div>
             <div class="feature-body">
                 <h3>Open source</h3>
