--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
                     <iframe src="http://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="89" height="20"></iframe>
 
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net" data-url="http://hangfire.io">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfireio" data-url="http://hangfire.io">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </p>
             </div>
