--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <h3>Fire and forget tasks</h3>
+            <h3>Fire-and-forget tasks</h3>
 <pre><span class="comm">// Static methods are for demo purposes</span>
 <span class="type">BackgroundJob</span>.Enqueue(<span class="hidden-sm">
     </span>() => <span class="type">Console</span>.WriteLine(<span class="string">"Simple!"</span>));</pre>
