--- a/index.html
+++ b/index.html
@@ -59,48 +59,48 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <a href="/img/ui/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
-                                <img itemprop="image" src="/img/ui/dashboard-sm.png" alt="Dashboard">
+                            <a href="http://cdn.hangfire.io/img/ui/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
+                                <img itemprop="image" src="http://cdn.hangfire.io/img/ui/dashboard-sm.png" alt="Dashboard">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/queues.png" data-lightbox="Screenshots" data-title="Queue List">
-                                <img src="/img/ui/queues-sm.png" alt="Queue List">
+                            <a href="http://cdn.hangfire.io/img/ui/queues.png" data-lightbox="Screenshots" data-title="Queue List">
+                                <img src="http://cdn.hangfire.io/img/ui/queues-sm.png" alt="Queue List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/job-details.png" data-lightbox="Screenshots" data-title="Job Details">
-                                <img src="/img/ui/job-details-sm.png" alt="Job Details">
+                            <a href="http://cdn.hangfire.io/img/ui/job-details.png" data-lightbox="Screenshots" data-title="Job Details">
+                                <img src="http://cdn.hangfire.io/img/ui/job-details-sm.png" alt="Job Details">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/retries.png" data-lightbox="Screenshots" data-title="Retry List">
-                                <img src="/img/ui/retries-sm.png" alt="Retry List">
+                            <a href="http://cdn.hangfire.io/img/ui/retries.png" data-lightbox="Screenshots" data-title="Retry List">
+                                <img src="http://cdn.hangfire.io/img/ui/retries-sm.png" alt="Retry List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/failed-jobs.png" data-lightbox="Screenshots" data-title="Failed Job List">
-                                <img src="/img/ui/failed-jobs-sm.png" alt="Failed Job List">
+                            <a href="http://cdn.hangfire.io/img/ui/failed-jobs.png" data-lightbox="Screenshots" data-title="Failed Job List">
+                                <img src="http://cdn.hangfire.io/img/ui/failed-jobs-sm.png" alt="Failed Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/recurring-jobs.png" data-lightbox="Screenshots" data-title="Recurring Jobs">
-                                <img src="/img/ui/recurring-jobs-sm.png" alt="Recurring Jobs">
+                            <a href="http://cdn.hangfire.io/img/ui/recurring-jobs.png" data-lightbox="Screenshots" data-title="Recurring Jobs">
+                                <img src="http://cdn.hangfire.io/img/ui/recurring-jobs-sm.png" alt="Recurring Jobs">
                             </a>
                         </div>          
                         <div class="item">
-                            <a href="/img/ui/batches.png" data-lightbox="Screenshots" title="Batch List">
-                                <img src="/img/ui/batches-sm.png" alt="Batch List">
+                            <a href="http://cdn.hangfire.io/img/ui/batches.png" data-lightbox="Screenshots" title="Batch List">
+                                <img src="http://cdn.hangfire.io/img/ui/batches-sm.png" alt="Batch List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/batch-details.png" data-lightbox="Screenshots" title="Batch Details">
-                                <img src="/img/ui/batch-details-sm.png" alt="Batch Details">
+                            <a href="http://cdn.hangfire.io/img/ui/batch-details.png" data-lightbox="Screenshots" title="Batch Details">
+                                <img src="http://cdn.hangfire.io/img/ui/batch-details-sm.png" alt="Batch Details">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="/img/ui/batch-jobs.png" data-lightbox="Screenshots" title="Batch Jobs">
-                                <img src="/img/ui/batch-jobs-sm.png" alt="Batch Jobs">
+                            <a href="http://cdn.hangfire.io/img/ui/batch-jobs.png" data-lightbox="Screenshots" title="Batch Jobs">
+                                <img src="http://cdn.hangfire.io/img/ui/batch-jobs-sm.png" alt="Batch Jobs">
                             </a>
                         </div>
                     </div>
