Include facebook script only on home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@ keywords: asp.net background jobs, asp.net background workers
 description: An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.
 ---
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="jumbotron jumbotron-underlined">
     <div class="container">
         <div class="row" itemscope itemtype="http://schema.org/SoftwareApplication">
