Fix quick-start link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
             <div class="feature-body">
                 <h3>Simple</h3>
                 <p>
-                    <a href="http://docs.hangfire.io/en/latest/quickstart.html" target="_blank">Easy to set up, easy to use</a>. No Windows Service, no Windows Scheduler, no separate applications required.
+                    <a href="http://docs.hangfire.io/en/latest/quick-start.html" target="_blank">Easy to set up, easy to use</a>. No Windows Service, no Windows Scheduler, no separate applications required.
                 </p>
                 <p>
                     Background jobs are regular static or instance .NET methods with regular arguments – no base class or interface implementation required.
