--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
 }</pre>
         </div>
         <div class="col-md-4 hidden-xs hidden-sm">
-            <a height="430" data-chrome="noborders" class="twitter-timeline" href="https://twitter.com/hangfireio" data-widget-id="451027617567621120">Твиты пользователя @hangfireio</a>
+            <a height="430" data-chrome="noborders" class="twitter-timeline" href="https://twitter.com/hangfireio" data-widget-id="451027617567621120">Tweets by @hangfireio</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
     </div>
