Add Hangfire badge image dimensions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
                 </p>
                    
                 <a href="https://www.nuget.org/packages/Hangfire/" target="_blank">
-                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="https://img.shields.io/github/release/HangfireIO/Hangfire.svg?style=flat"></a>
+                    <img style="display: inline-block;vertical-align: inherit;margin-right:5px;width:94px;height:20px;" src="https://img.shields.io/github/release/HangfireIO/Hangfire.svg?style=flat"></a>
                     
                 <!--a href="https://www.nuget.org/packages/Hangfire.Core/" target="_blank">
                     <img style="display: inline-block;vertical-align: inherit;margin-right:5px;" src="https://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat"></a-->
