Remove the unused css class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="jumbotron jumbotron-underlined">
+<div class="jumbotron">
     <div class="container">
         <div class="row" itemscope itemtype="http://schema.org/SoftwareApplication">
             <div class="col-md-7">
